# Path_Work

BAE_Ether_ECT/: LICENSE  README.md
BAE_Ether_ECT/src/Datasheet and app for ETi-300/: ATE BNC 200kHz Test 2.xml  ATE Tube Test 1.xml  license.txt  ~$i-300 - Quick Start Guide V1.docx
BAE_Ether_ECT/src/ETherRealTime - Customers/: Communicating with a compatible ETherNDE Instrument over Virtual COM Port v1.4.doc  ETherRealTime.sln  ~$mmunicating with a compatible ETherNDE Instrument over Virtual COM Port v1.4.doc
BAE_Ether_ECT/src/ETherRealTime - Customers/ETherRealTime/: CScanViewer.Designer.cs  CScanViewer.cs  Class1.cs  ETherRealTime.csproj  ETherRealTime.csproj.bak  Form1.Designer.cs  Form1.Designer.cs.bak  Form1.cs  Form1.cs.bak  Form1.resx  Help.Designer.cs  Help.cs  InstrumentSettings.cs  MessageBoxNONModal.Designer.cs  MessageBoxNONModal.cs  NewFolder.Designer.cs  NewFolder.cs  NewFolder.resx  Program.cs  UpgradeLog.htm  UpgradeLog2.htm  Win32.cs  comboWithXML.cs  nudWithXML.cs  radbutWithXML.cs
BAE_Ether_ECT/src/ETherRealTime - Customers/ETherRealtimeInstaller/: ETherRealtimeInstaller.vdproj
BAE_Ether_ECT/src/Multiplexer8Elements/: ETI_main.txt  Mux_bus_Tx_Rx.kicad_pcb  Mux_bus_Tx_Rx.kicad_prl  Mux_bus_Tx_Rx.kicad_pro  Mux_bus_Tx_Rx.kicad_sch
BAE_Ether_ECT/src/New array firmware/: ETi_alexis.m  ETi_alexis_array.m  ETi_alexis_array_cscan.m  ETi_alexis_array_cscan_v2.m  ETi_alexis_v1.m  StreamETiData.m  StreamingDataETI_December2025.m  configurationETI.asv  configurationETI.m  send_and_check_xml.m  set_channel_basic.m  wakeupETI.m
BAE_Ether_ECT/src/Save data/: eti_data.csv  first test.etm.xml  linearscan_ethermap.etm.xml  test.xml  test2.xml  working config.txt
BAE_Ether_ECT/src/Scripts/: ECT_VCP- matlab.py  ETI_VCP_FINAL_v2.1.py  ETI_VCP_FINAL_v2.1.txt  ETI_VCP_FINAL_v2.2.py  ETI_VCP_FINAL_v2.3.py  ETI_VCP_FINAL_v2.py  ETI_VCP_FINAL_v3.py  ETI_VCP_FINAL_v4.py  ETI_VCP_FINAL_v5.py  ETI_VCP_FINAL_v6.py  ETI_VCP_final.m  ETi_matlab.asv  ETi_matlab.m  eti_data.csv
BAE_lbr_noetic_control/: README.md
BAE_lbr_noetic_control/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run.sh  setup_env.sh
BAE_robot_tasks/: package.xml  setup.cfg  setup.py
BAE_robot_tasks/config/: capture_poses.yaml
BAE_robot_tasks/robot_tasks/: capture_runner.py  robot_base.py  task_runner.py
BAE_system_bringup/: README.md
BAE_system_bringup/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run.sh  setup_env.sh
BAE_system_description/: CMakeLists.txt  package.xml
BAE_system_description/launch/: view_system.launch.py
BAE_system_description/rviz/: view_system.rviz
BAE_system_description/scripts/: pointcloud_downsampler
BAE_system_description/urdf/: bae_system.urdf.xacro
BAE_systems_docs/: README.md
cad_path_planner/: parse_cad.py  part.STL  planned_path.json  register_part.py  registration_matrix.json
camera_mount_description/: CMakeLists.txt  README.md  package.xml
camera_mount_description/meshes/: camera_mount.stl
camera_mount_description/urdf/: camera_mount.xacro
iiwa_msgs/: CMakeLists.txt  my_bridge_mapping.yaml  package.xml
iiwa_msgs/msg/: CartesianControlModeLimits.msg  CartesianEulerPose.msg  CartesianImpedanceControlMode.msg  CartesianPose.msg  CartesianVelocity.msg  JointDamping.msg  JointImpedanceControlMode.msg  JointPosition.msg  JointPositionVelocity.msg  JointStiffness.msg  JointTorque.msg  JointVelocity.msg  Spline.msg  SplineSegment.msg
iiwa_msgs/srv/: SetPTPCartesianSpeedLimits.srv
lbr_fri_ros2_stack/: CHANGELOG.rst  CITATION.cff  README.md
lbr_fri_ros2_stack/.github/workflows/: backport.yaml  build-ubuntu-24.04-fri-1.11.yml  build-ubuntu-24.04-fri-1.14.yml  build-ubuntu-24.04-fri-1.15.yml  build-ubuntu-24.04-fri-1.16.yml  build-ubuntu-24.04-fri-2.5.yml  build-ubuntu-24.04-fri-2.7.yml  build-ubuntu-24.04.yml
lbr_fri_ros2_stack/docker/doc/: docker.rst
lbr_fri_ros2_stack/lbr_bringup/doc/: lbr_bringup.rst
lbr_fri_ros2_stack/lbr_bringup/launch/: gazebo.launch.py  hardware.launch.py  mock.launch.py  move_group.launch.py  moveit_servo.launch.py  rviz.launch.py
lbr_fri_ros2_stack/lbr_bringup/lbr_bringup/: description.py  gazebo.py  moveit.py  ros2_control.py  rviz.py
lbr_fri_ros2_stack/lbr_demos/lbr_demos_advanced_cpp/: CMakeLists.txt
lbr_fri_ros2_stack/lbr_demos/lbr_demos_advanced_py/: setup.py
lbr_fri_ros2_stack/lbr_demos/lbr_demos_cpp/: CMakeLists.txt
lbr_fri_ros2_stack/lbr_demos/lbr_demos_cpp/doc/: lbr_demos_cpp.rst
lbr_fri_ros2_stack/lbr_demos/lbr_demos_cpp/src/: joint_sine_overlay.cpp  torque_sine_overlay.cpp  wrench_sine_overlay.cpp
lbr_fri_ros2_stack/lbr_demos/lbr_demos_py/: setup.py
lbr_fri_ros2_stack/lbr_demos/lbr_moveit/: setup.py
lbr_fri_ros2_stack/lbr_demos/lbr_moveit_cpp/: CMakeLists.txt
lbr_fri_ros2_stack/lbr_demos/lbr_moveit_cpp/doc/: lbr_moveit_cpp.rst
lbr_fri_ros2_stack/lbr_demos/lbr_moveit_cpp/src/: hello_moveit.cpp
lbr_fri_ros2_stack/lbr_description/: CMakeLists.txt
lbr_fri_ros2_stack/lbr_description/gazebo/: lbr_gazebo.xacro
lbr_fri_ros2_stack/lbr_description/test/: test_urdf.py
lbr_fri_ros2_stack/lbr_fri_ros2/: CMakeLists.txt
lbr_fri_ros2_stack/lbr_fri_ros2/src/: async_client.cpp  control.cpp  filters.cpp  math.cpp  wrench_estimator.cpp
lbr_fri_ros2_stack/lbr_fri_ros2/test/: test_command_interfaces.cpp  test_position_command.cpp  test_torque_command.cpp  test_wrench_command.cpp
lbr_fri_ros2_stack/lbr_fri_ros2_stack/: repos-fri-1.11.yaml  repos-fri-1.14.yaml  repos-fri-1.15.yaml  repos-fri-1.16.yaml  repos-fri-2.5.yaml  repos-fri-2.6.yaml  repos-fri-2.7.yaml
lbr_fri_ros2_stack/lbr_moveit_config/doc/: lbr_moveit_config.rst
lbr_fri_ros2_stack/lbr_ros2_control/: CMakeLists.txt
lbr_fri_ros2_stack/lbr_ros2_control/doc/: lbr_ros2_control.rst
lbr_fri_ros2_stack/lbr_ros2_control/plugin_description_files/: controllers.xml
lbr_fri_ros2_stack/lbr_ros2_control/src/: system_interface.cpp
ros1_bridge/src/: static_bridge.cpp
ros_noetic_humble_bridge/: Dockerfile  README.md  bridge.yaml  docker-compose.yml  entrypoint.sh  run.sh  setup_env.sh
zivid-ros/: README.md
(+71 files in other folders)
