<?xml version="1.0"?>
<package format="3">
  <name>iiwa_msgs</name>
  <version>0.0.0</version>
  <description>ROS2 port of KUKA iiwa interface messages</description>

  <maintainer email="vedran.tunukovic@strath.ac.uk">vedran</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="my_bridge_mapping.yaml"/>
  </export>
</package>